fix: align cult header text

--- a/src/items/_itemsheets.scss
+++ b/src/items/_itemsheets.scss
@@ -97,6 +97,10 @@
       gap: 0.25rem;
     }
 
+    .text-value {
+      line-height: var(--input-height);
+    }
+
     select {
       display: block;
     }
